--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=ExamenParcial
+server.port=8081
+spring.datasource.url=jdbc:mysql://localhost:3306/ExamenParcial
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
